

Release 0.3.2 "Don't Bet on the River"

  o Fix crash due to rigid body refinement of atoms with zero
    occupancy

  o Add further SHELX support: .res files are split and unsplit on
    reading/writing.  Solve the ^M problem like SHELX does. SHELXL
    refinement interface improved [GMS]

  o Fix crash when applying NCS edits [Michael Url]

  o Added CNS map-reading [provided by Kevin Cowtan]. ".cns" is now 
    an acceptable map extension.

  o Add Terminal Residue for nucleotide polymers

  o Alt confs of ligands no longer fly appart on regularization

  o GTk+-2 interface now usable

  o Added SEGID info to clicked atom [Christine Durnham]

  o Added function fill-partial-residue [Bob Nolte]

  o Added function transform-molecule-by [Alastair Fyfe]

  o map transformation function fixed

  o Added function to change the colour of the unit cell [Dirk Kostrewa]

  o Added multi-threaded socket reading for Phenix and other
    interfaces

  o Added function "blob under cursor -> screen centre" [FvD]

  o Fix map reading so that it accepts user-approved extensions
    [Peter Meyer]

  o Reading a bespoke cif dictonary no longer cripples "Get Monomer"
    for conventional residues [Judit Debreczeni]

  o Added Views system [inspired by PyMol]

  o Colour by B-factor and Occupancy [Jean Whittingham]

  o Ramachandran plot dialog remembers where it was put last time
    [Shawn Williams] 

  o Display Control confusion about Display/Active state of molecules
    untangled

  o On startup, the Go To Atom dialog no longer is inconsistent
    between the chain chain and molecule chooser [GMS]

  o Further tinkering with the bonding algorithm

  o generic-double-entry interface changed, breaking
    backwards-compatibility.  It now takes arguments for a check
    button.

    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------

